<resources>
    <string name="app_name">Pneumonia Detect</string>
    <string name="icon">icoon</string>
    <string name="welcome">Welcome !</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="last_name">Last Name</string>
    <string name="signIn2">Already Register? Sign In</string>
    <string name="Next">next</string>
    <string name="confirm_password">Confirm password</string>
    <string name="Logout">logout</string>
</resources>